# ollama-prometheus-exporter

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
grafana/: ollama-proxy-exporter-dashboard.json
src/ollama_prometheus_exporter/: __init__.py  client.py  config.py  main.py  metrics.py
tests/: test_metrics.py
