[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ollama-prometheus-exporter"
version = "0.1.0"
description = "Prometheus exporter for Ollama service metrics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
  { name = "Evan Hoffman" },
]
keywords = ["ollama", "prometheus", "exporter", "metrics", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "prometheus-client>=0.21.0",
  "pydantic-settings>=2.7.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
]

[project.scripts]
ollama-prometheus-exporter = "ollama_prometheus_exporter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_prometheus_exporter"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
